# paper-hpke-in-avionics-supplemental

./: .gitmodules  Cargo.toml  README.md  benches.txt  flake.nix  measure_heap.py  measure_stack.py  measures.py  parse_criterion.py  treefmt.nix
benches/: crypt.rs
crypto_agility_crypto_api/: Cargo.toml
crypto_agility_crypto_api/benches/: crypt.rs
crypto_agility_crypto_api/examples/memory_bench/: Cargo.toml
crypto_agility_crypto_api/examples/memory_bench/src/: empty.rs  empty_cipher.rs  hdkf_sha512.rs  lib.rs  main.rs  xyber1024dilithium.rs  xyber1024dilithium_oqs.rs  xyber768.rs  xyber768_oqs.rs  xyber768_oqs_ghp.rs  xyber768dilithium.rs  xyber768dilithium_oqs.rs  xyber768dilithium_oqs_ghp.rs
crypto_agility_crypto_api/src/client/: request.rs
crypto_agility_crypto_api/src/server/: hpke.rs  mod.rs
examples/memory_bench/: Cargo.toml
examples/memory_bench/src/: dilithium.rs  empty_cipher.rs  lib.rs  main.rs
figures/: drakon_decaps.drakon  drakon_encaps.drakon
src/: dilithium.rs  hdkf_sha256.rs  kyber768.rs  main.rs
src/server/: hpke.rs
