[package]
name = "crypto-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crypto_agility_crypto_api = { git = "https://github.com/DLR-FT/a653rs-linux.git", branch = "add-crypto-example"}
hpke = { version = "*", features = ["xyber768", "xyber768dilithium"] }
serde = "1.0"
crypto-common = "0.1"
digest = "0.10"
aead = "0.5"
rand = "0.8"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "crypt"
harness = false

[patch.crates-io]
hpke = { git = "ssh://git@github.com/rosenpass/pq-hpke-in-avionics", branch = "main" }
