[package]
name = "crypto_agility_crypto_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hpke = "*"
anyhow = "1.0"
heapless = "0.8"
rand = "0.8.5"
num-traits = "0.2"
num-derive = "0.4"
log = "0.4"

[dev-dependencies]
criterion = "0.5"
pretty_env_logger = "0.5"
mockall = "0.12"
memory_bench.path = "examples/memory_bench"

[[bench]]
name = "crypt"
harness = false

