[package]
name = "memory_bench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["seal", "kyber768dilithium"]
seal = []
open = []
empty = []
hdkf256 = []
hdkf512 = []
kyber768 = []
kyber768dilithium = []
xyber1024dilithium_oqs = []
xyber768_oqs = []
xyber768_oqs_ghp = []
xyber768dilithium_oqs = []
xyber768dilithium_oqs_ghp = []

[dependencies]
crypto_agility_crypto_api.path = "../.."
hpke = "*"
serde = "1.0"
crypto-common = "0.1"
digest = "0.10"
aead = "0.5"
rand = "0.8"
